--- a/deploy/rbac.yaml
+++ b/deploy/rbac.yaml
@@ -1,4 +1,4 @@
-kind: Role
+kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: memcached-operator
@@ -33,14 +33,11 @@ rules:
 
 ---
 
-kind: RoleBinding
+kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: memcached-operator
-subjects:
-- kind: ServiceAccount
-  name: memcached-operator
 roleRef:
-  kind: Role
+  kind: ClusterRole
   name: memcached-operator
   apiGroup: rbac.authorization.k8s.io
